--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,35 @@ body {
   width: 100%;
 }
 
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: brown;
+  padding: 1rem;
+  z-index: 9999;
+}
+
+input,
+label {
+  display: block;
+}
+
+input {
+  margin-bottom: 1rem;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 9999;
+}
+
 .header,
 .center {
   padding: 1rem;
