--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@ body {
   color: red;
 }
 
+.editable {
+  margin: 0.5rem;
+  border: 1px dashed grey;
+}
+
 #root {
   margin: 0 auto;
   width: 100%;
