--- a/src/index.css
+++ b/src/index.css
@@ -239,15 +239,13 @@ p {
 
 input {
   display: block;
-  margin: 0.25rem auto;
+  margin: 0.25rem auto 1rem auto;
   padding: 0.5rem;
-}
-
-input {
-  margin-bottom: 1rem;
   width: 100%;
-  height: 37px;
+  height: 2rem;
+  outline: none;
   border-radius: 10px;
+  border: 1px solid var(--icon-active);
 }
 
 /***********************************************************/
@@ -509,7 +507,12 @@ input {
 /********************* Appointments ************************/
 /***********************************************************/
 
+.appointment-preview {
+  text-align: center;
+}
+
 .appointment-item-div {
+  margin: 2rem 0;
   width: 100%;
 }
 
