searchForm test select click area fix, enter/esc keydown in account item save/cancel, close confirm modal keeps prev page even after refresh of search

--- a/src/index.css
+++ b/src/index.css
@@ -195,6 +195,10 @@
 /******************** General Styles ***********************/
 /***********************************************************/
 
+.error {
+  color: var(--highlight-red);
+}
+
 .display-none {
   display: none;
 }
