--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,113 @@
 }
 
 /***********************************************************/
+/********************* Toggle Switches *********************/
+/***********************************************************/
+
+ol {
+  list-style: none;
+}
+
+[type='checkbox'] {
+  position: absolute;
+  left: -9999px;
+}
+
+.switches {
+  max-width: 500px;
+  width: 95%;
+  margin: 50px auto 0;
+  border-radius: 5px;
+  color: var(--white);
+  background: var(--blue);
+}
+
+.switches li {
+  position: relative;
+}
+
+.switches li:not(:last-child) {
+  border-bottom: 1px solid var(--gray);
+}
+
+.switches li::before {
+  position: absolute;
+  top: 50%;
+  left: -30px;
+  transform: translateY(-50%);
+  font-size: 2rem;
+  font-weight: bold;
+  color: var(--pink);
+}
+
+.switches label {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px;
+}
+
+.switches span:last-child {
+  position: relative;
+  width: 50px;
+  height: 26px;
+  border-radius: 15px;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.4);
+  background: var(--gray);
+  transition: all 0.3s;
+}
+
+.switches span:last-child::before,
+.switches span:last-child::after {
+  content: '';
+  position: absolute;
+}
+
+.switches span:last-child::before {
+  left: 1px;
+  top: 1px;
+  width: 24px;
+  height: 24px;
+  background: var(--white);
+  border-radius: 50%;
+  z-index: 1;
+  transition: transform 0.3s;
+}
+
+.switches span:last-child::after {
+  top: 50%;
+  right: 8px;
+  width: 12px;
+  height: 12px;
+  transform: translateY(-50%);
+  background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/uncheck-switcher.svg);
+  background-size: 12px 12px;
+}
+
+.switches [type='checkbox']:checked + label span:last-child {
+  background: var(--green);
+}
+
+.switches [type='checkbox']:checked + label span:last-child::before {
+  transform: translateX(24px);
+}
+
+.switches [type='checkbox']:checked + label span:last-child::after {
+  width: 14px;
+  height: 14px;
+  left: 8px;
+  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/checkmark-switcher.svg);
+  background-size: 14px 14px;
+}
+
+@media screen and (max-width: 600px) {
+  .switches li::before {
+    display: none;
+  }
+}
+
+/***********************************************************/
 /*********************** Skeletons *************************/
 /***********************************************************/
 
