--- a/src/index.css
+++ b/src/index.css
@@ -340,9 +340,10 @@ body {
 #root {
   margin: 0 auto;
   width: 100%;
-  height: 150%;
+  min-height: 100%;
   max-width: 500px;
   background-color: var(--bg-primary);
+  border: 1px dotted red;
 }
 
 /* wraps all jsx */
@@ -352,10 +353,12 @@ body {
 }
 
 #pages {
+  padding-bottom: 80px;
   position: relative;
   top: 96px;
-  height: 1000%;
+  height: 100%;
   min-height: 100%;
+  border: 1px solid gold;
 }
 
 .form {
