--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,8 @@
   --gray: gray;
   --green: green;
   --pink: pink;
+  --red: red;
+  --bg-modal: rgba(228, 231, 235, 1);
   font-family: 'Mulish', sans-serif;
 }
 
@@ -343,7 +345,6 @@ body {
   min-height: 100%;
   max-width: 500px;
   background-color: var(--bg-primary);
-  border: 1px dotted red;
 }
 
 /* wraps all jsx */
@@ -358,7 +359,6 @@ body {
   top: 96px;
   height: 100%;
   min-height: 100%;
-  border: 1px solid gold;
 }
 
 .form {
@@ -376,14 +376,64 @@ body {
 }
 
 .modal {
-  padding: 2rem;
   position: fixed;
   top: 50%;
   width: 100%;
   transform: translate(0, -50%);
-  background-color: var(--bg-secondary);
+  background-color: var(--bg-modal);
   padding: 1rem;
   z-index: 9999;
+}
+
+#alert-modal {
+  position: fixed;
+  top: 90px;
+  width: 100%;
+  z-index: 10000;
+  overflow: hidden;
+}
+
+.alert-init {
+  position: relative;
+  padding: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 10px;
+  opacity: 0;
+  transform: translateY(-100%);
+  transition: 150ms ease-out;
+}
+
+.alert-success,
+.alert-error {
+  opacity: 0.85;
+  transform: translateY(0);
+}
+
+.alert-init span {
+  position: absolute;
+  width: 100%;
+  height: 1.6rem;
+  border-bottom: 1px solid var(--white);
+  animation: countdown 4s linear forwards;
+}
+
+@keyframes countdown {
+  0% {
+    width: 100%;
+  }
+  100% {
+    width: 0;
+  }
+}
+
+.alert-success {
+  top: -0.5rem;
+  background-color: var(--green);
+}
+.alert-error {
+  background-color: var(--red);
 }
 
 .text-center {
