reorganize login form handling

--- a/src/index.css
+++ b/src/index.css
@@ -440,6 +440,10 @@ body {
   text-align: center;
 }
 
+.invalid-field {
+  border: 1px solid var(--red);
+}
+
 .error {
   color: var(--highlight-red);
 }
