--- a/src/index.css
+++ b/src/index.css
@@ -525,6 +525,7 @@ p {
   height: 2rem;
   border-radius: 10px;
   border-style: none;
+  cursor: pointer;
   font-family: Mulish;
   font-style: normal;
   font-weight: bold;
